--- a/wp-content/themes/soboa95ans/package.json
+++ b/wp-content/themes/soboa95ans/package.json
@@ -1,46 +1,67 @@
 {
-  "name": "underscores",
-  "version": "1.0.0",
-  "description": "Hi. I'm a starter theme called _s, or underscores, if you like. I'm a theme meant for hacking so don't use me as a Parent Theme. Instead try turning me into the next, most awesome, WordPress theme out there. That's what I'm here for.",
-  "author": "Automattic Theme Team",
-  "license": "GPL-2.0-or-later",
-  "keywords": [
-    "WordPress",
-    "Theme"
-  ],
-  "homepage": "https://github.com/Automattic/_s#readme",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Automattic/_s.git"
-  },
-  "bugs": {
-    "url": "https://github.com/Automattic/_s/issues"
-  },
-  "devDependencies": {
-    "@wordpress/scripts": "^19.2.2",
-    "dir-archiver": "^1.1.1",
-    "node-sass": "^7.0.1",
-    "rtlcss": "^3.5.0"
-  },
-  "rtlcssConfig": {
-    "options": {
-      "autoRename": false,
-      "autoRenameStrict": false,
-      "blacklist": {},
-      "clean": true,
-      "greedy": false,
-      "processUrls": false,
-      "stringMap": []
-    },
-    "plugins": [],
-    "map": false
-  },
-  "scripts": {
-    "watch": "node-sass sass/ -o ./ --source-map true --output-style expanded --indent-type tab --indent-width 1 -w",
-    "compile:css": "node-sass sass/ -o ./ && stylelint '*.css' --fix || true && stylelint '*.css' --fix",
-    "compile:rtl": "rtlcss style.css style-rtl.css",
-    "lint:scss": "wp-scripts lint-style 'sass/**/*.scss'",
-    "lint:js": "wp-scripts lint-js 'js/*.js'",
-    "bundle": "dir-archiver --src . --dest ../_s.zip --exclude .DS_Store .stylelintrc.json .eslintrc .git .gitattributes .github .gitignore README.md composer.json composer.lock node_modules vendor package-lock.json package.json .travis.yml phpcs.xml.dist sass style.css.map yarn.lock"
-  }
+	"name": "html5resetxmaterializecss",
+	"version": "1.0.0",
+	"description": "V2 .",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/jhouedanou/Html5ResetxMaterializeCSS.git"
+	},
+	"author": "Jean Luc Houedanou",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/jhouedanou/Html5ResetxMaterializeCSS/issues"
+	},
+	"homepage": "https://github.com/jhouedanou/Html5ResetxMaterializeCSS#readme",
+	"devDependencies": {
+		"browser-sync": "^2.27.5",
+		"es6-promise": "^4.2.8",
+		"gulp": "^4.0.2",
+		"gulp-autoprefixer": "^8.0.0",
+		"gulp-concat": "^2.6.1",
+		"gulp-exit": "0.0.2",
+		"gulp-imagemin": "^7.1.0",
+		"gulp-jshint": "^2.1.0",
+		"gulp-livereload": "^4.0.2",
+		"gulp-main-bower-files": "^1.8.2",
+		"gulp-notify": "^4.0.0",
+		"gulp-plumber": "^1.2.1",
+		"gulp-rename": "^2.0.0",
+		"gulp-rtlcss": "^1.4.2",
+		"gulp-sass": "^5.1.0",
+		"gulp-shell": "^0.8.0",
+		"gulp-strip-json-comments": "^4.0.1",
+		"gulp-svg-sprite": "^1.5.0",
+		"gulp-svg2png": "^2.0.2",
+		"gulp-uglify": "^3.0.2",
+		"gulp-uglify-es": "^3.0.0",
+		"gulp-util": "^3.0.8",
+		"gulp.spritesmith": "^6.12.1",
+		"install": "^0.13.0",
+		"jshint": "^2.13.0",
+		"main-bower-files": "^2.13.3",
+		"ngrok": "^4.1.0",
+		"npm": "^7.20.2",
+		"psi": "^4.1.0",
+		"run-sequence": "^2.2.1",
+		"sass": "^1.60.0"
+	},
+	"dependencies": {
+		"css-scss": "^0.1.1",
+		"gulp-css-scss": "^0.1.0",
+		"gulp-haml": "^1.0.1",
+		"gulp-sourcemaps": "^3.0.0",
+		"gulp-stylus": "^2.7.0",
+		"gulp.spritesmith": "^6.12.1",
+		"lodash.clonedeep": "^4.5.0",
+		"lodash.omit": "^4.5.0",
+		"masonry-layout": "^4.2.2",
+		"npm-install-missing": "^0.1.4",
+		"swiper": "^11.1.15",
+		"vinyl-sourcemaps-apply": "^0.2.1",
+		"wiredep": "^4.0.0"
+	}
 }
